made chat working yayyy

--- a/chat_som/requirements.txt
+++ b/chat_som/requirements.txt
@@ -4,5 +4,8 @@ pypdf
 chromadb
 tiktoken
 pandas
-sudo apt update
-sudo apt install apache2 php libapache2-mod-php
+flask
+langchain-experimental
+tabulate
+langchain[docarray]
+pydantic
